# test_mini_project

./: .gitignore  NL-PROMPTS.MD  README.md  Untitled-1  applets.md  collections.md  documentation.md  documentation2.md  ex.md  icarus_multi_mcp_workflows.md  icarus_workflows.md  mcp_documentation.md  universal_demo_dataset.md
anomaly_detection_mcp/: Cargo.toml  anomaly_detection.widl  bindings.rs  manifest.json
anomaly_detection_mcp/src/: lib.rs
dashboard_webserver/: Cargo.toml  bindings.rs  bindings.ts  dashboard_webserver.widl
dashboard_webserver/src/: anomaly_detection.rs  entity_relationship.rs  lib.rs  regulatory_reports.rs  slack_notifier.rs  trade_data.rs  upsi_database.rs
entity_relationship_mcp/: Cargo.toml  bindings.rs  entity_relationship.widl  neo4j_test_data.cypher
entity_relationship_mcp/src/: lib.rs
jira_mcp/: Cargo.toml  bindings.rs  jira_mcp.widl  manifest.json
jira_mcp/src/: lib.rs
jira_mcp1/: Cargo.toml  README.md  jira_mcp.widl
jira_mcp1/src/: lib.rs
regulatory_reports_mcp/: Cargo.toml  bindings.rs  regulatory_reports.widl
risk_scoring_mcp/: Cargo.toml  bindings.rs  risk_scoring.widl
risk_scoring_mcp/src/: lib.rs
slack_notifier_mcp/: Cargo.toml  bindings.rs  slack_notifier.widl
surveillance_dashboard/: Cargo.toml  bindings.rs  push_test_data.sh  surveillance_dashboard.widl
trade_data_mcp/: Cargo.toml  TEST_COMMANDS.md  bindings.rs  trade_data.widl
upsi_database_mcp/: Cargo.toml  bindings.rs  manifest.json  seed_test_data.sql  test_connection.py  test_logic.py  upsi_database.widl  xnoe
upsi_database_mcp/src/: lib.rs
(+10 files in other folders)
