[package]
name = "dashboard_webserver"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
weil_rs = { path = "../../wadk-0.1.0/adk/rust/weil_rs/" }
weil_macros = { path = "../../wadk-0.1.0/adk/rust/weil_rs/weil_macros" }
weil_contracts = { path = "../../wadk-0.1.0/adk/rust/weil_rs/weil_contracts" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0.97"
