[package]
name = "upsi_database_mcp"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.97"
serde = "1.0.219"
serde_json = "1.0.140"
weil_rs = { path = "../../wadk-0.1.0/adk/rust/weil_rs/" }
weil_macros = { path = "../../wadk-0.1.0/adk/rust/weil_rs/weil_macros" }
weil_contracts = { path = "../../wadk-0.1.0/adk/rust/weil_rs/weil_contracts" }

[lib]
crate-type = ["cdylib"]
